--- a/MagicBus/res/values/strings.xml
+++ b/MagicBus/res/values/strings.xml
@@ -2,10 +2,11 @@
 <resources>
     <string name="app_name">Magic Bus</string>
     
-    <string name="route_view_refresh">Refresh</string>
-    <string name="route_view_please_wait">Please wait...</string>
-    <string name="route_view_fetching_feed">Fetching feed...</string>
-    <string name="route_view_fetch_error">An unexpected error occurred when fetching feed.</string>
+    <string name="refresh">Refresh</string>
+    <string name="please_wait">Please wait...</string>
+    <string name="fetching_feed">Fetching feed...</string>
+    <string name="fetch_error">An unexpected error occurred when fetching feed.</string>
+    
     <string name="route_view_no_feed">Feed unavailable.</string>
     <string name="route_view_no_routes">No routes running at this time!</string>
     
