--- a/MagicBus/res/values/strings.xml
+++ b/MagicBus/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="route_view_no_routes">No routes running at this time!</string>
     
     <string name="stop_view_no_route">This route is no longer running.</string>
+    <string name="stop_view_add_to_favorites">Add to favorites</string>
+    <string name="stop_view_remove_from_favorites">Remove from favorites</string>
     
     <string name="stop_details_view_other_names">Other names:</string>
     <string name="stop_details_view_arrivals">Arrivals:</string>
