--- a/MagicBus/res/values/strings.xml
+++ b/MagicBus/res/values/strings.xml
@@ -16,6 +16,8 @@
     
     <string name="stop_details_view_other_names">Other names:</string>
     <string name="stop_details_view_arrivals">Arrivals:</string>
+    <string name="stop_details_view_remove_from_favorites">Remove from favorites</string>
+    <string name="stop_details_view_add_to_favorites">Add to favorites</string>
     
     <string name="favorites_view_no_favorites">You have no favorites.</string>
 </resources>
